--- a/app.json
+++ b/app.json
@@ -1,7 +1,8 @@
 {
   "expo": {
     "name": "TaskMaster",
-    "slug": "TaskMaster",
+    "slug": "taskmaster",
+    "owner": "mertkozcan",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
